--- a/front/Platender.Front/wwwroot/index.html
+++ b/front/Platender.Front/wwwroot/index.html
@@ -8,8 +8,10 @@
     <base href="/" />
     <link rel="icon" type="image/png" href="favicon.png" />
 
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="Platender.Front.styles.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
