--- a/front/Platender.Front/wwwroot/index.html
+++ b/front/Platender.Front/wwwroot/index.html
@@ -32,6 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="ImageOperations.js"></script>
     <script src="PasteMultimedia.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
