Images (byte) are converted to base64 and showed in comment, Console cleanup. Fixed too much comment od 2+ calls

--- a/front/Platender.Front/wwwroot/index.html
+++ b/front/Platender.Front/wwwroot/index.html
@@ -34,6 +34,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="ImageOperations.js"></script>
     <script src="PasteMultimedia.js"></script>
+    <script src="Observer.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
